--- a/src/app/usit/components/openreqs/linkedin-requirements/linkedin-requirements.component.html
+++ b/src/app/usit/components/openreqs/linkedin-requirements/linkedin-requirements.component.html
@@ -1,11 +1,11 @@
 <div class="hot-list-container">
     <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
-        <li class="last">Dice Requirements</li>
+        <li class="last">LinkedIn Requirements</li>
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Dice Requirements
+            LinkedIn Requirements
         </span>
         <div class="hot-list-actions">
             <div class="search-hot-list">
