--- a/src/app/usit/components/rssfed/rssfed.component.html
+++ b/src/app/usit/components/rssfed/rssfed.component.html
@@ -57,7 +57,7 @@
                 <!-- Experience Column-->
                 <ng-container matColumnDef="city">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"> Location </th>
-                    <td mat-cell *matCellDef="let element">{{element?.city}} , {{element?.state}} , {{element?.country}}
+                    <td mat-cell *matCellDef="let element">{{element?.city}} , {{element?.state}}
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="jobtype">
