--- a/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.html
+++ b/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.html
@@ -159,7 +159,7 @@
                             </mat-option>
                         </mat-select>
                         <button type="button" matSuffix mat-icon-button (click)="addRecruiter()"><mat-icon>add</mat-icon></button>
-                        <mat-error *ngIf="submissionForm.get('recruiter')!.hasError('required')">Contact Person Name
+                        <mat-error *ngIf="submissionForm.get('recruiter')!.hasError('required')">Recruiter
                             is Required
                         </mat-error>
                     </mat-form-field>
