--- a/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.html
@@ -8,23 +8,34 @@
 </div>
 
 <div class="uploadexcel">
-    <mat-form-field class="upload">
-        <mat-label for="resume">VMS Upload</mat-label>
-        <div class="upload-inp-container">
-          <!-- <input matInput readonly name="resumeName" class="file-input"
-            [value]="excelupload ? excelupload.name : 'No file chosen'" /> -->
-            <!-- Changes made in the HTML template to display the uploaded file name -->
-<input matInput readonly name="resumeName" class="file-input"
-[value]="excelupload ? excelupload.name : 'No file chosen'" />
-
-          <label for="resume" class="browse-button-label">
-            <button type="button" mat-icon-button (click)="excelupload.click()"><mat-icon>upload_file</mat-icon></button>
-          </label>
-          <input type="file" #excelupload id="excelupload" (change)="uploadResume($event)"
-          accept="application/vnd.ms-excel"
-            style="display: none;" />
-        </div>
-      </mat-form-field>
+   <div class="upload-excel">
+    <div>
+        <mat-form-field class="upload">
+            <mat-label for="vmsUpload">VMS Upload</mat-label>
+            <div class="upload-inp-container">
+                <input matInput readonly name="resumeName" class="file-input"
+                [value]="excelFileName" />
+                <label for="vmsUpload" class="browse-button-label">
+                    <button type="button" mat-icon-button
+                        (click)="excelupload.click()"><mat-icon>upload_file</mat-icon></button>
+                </label>
+                <input type="file" #excelupload id="excelupload" (change)="uploadResume($event)"
+                    accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" style="display: none;" />
+            </div>
+        </mat-form-field>
+    </div>
+    <div class="upload-button">
+        <button mat-raised-button color="primary" (click)= submit(data.userId) [disabled]="upload">
+            <span *ngIf="loading">Uploading...</span>
+            <span *ngIf="!loading">Upload Excel</span>
+        </button>
+    </div>
+   </div>
+    <div class="download-excel">
+        <button mat-icon-button matTooltip="Sample VMS Excel Data" matTooltipPosition="left" style="background-color: green; color: white;" (click)="handleExport()">
+            <mat-icon>download</mat-icon>
+        </button>
+    </div>
 </div>
 
 <div id="table-container" class="table-wrapper">
@@ -33,6 +44,12 @@
 
             <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Serial Number -->
+            <ng-container matColumnDef="SNo">
+                <th mat-header-cell *matHeaderCellDef>S.No</th>
+                <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+            </ng-container>
 
             <!-- Company -->
             <ng-container matColumnDef="Company">
@@ -84,5 +101,7 @@
             <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: dataTableColumns;" ></tr>
         </table>
+        <p class="no-data-found" *ngIf="!excel.length">{{'No matching data found'}}</p>
     </section>
+    <hr>
 </div>
