--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
     <button mat-menu-item class="user-name">
       {{ userManagementServ.getRoleName() }} 
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item  routerLink="password">
       My Profile
       <mat-icon class="icon">person</mat-icon>
     </button>
