--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -34,9 +34,11 @@
                   </button>
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Sales','admin')"> {{ subcount }} </span>
+                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="subPop('Sales','admin')"> {{ subcount }} </span>
                   </p>
-                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Recruiting','admin')"> {{ reccount }}
+                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="subPop('Recruiting','admin')"> {{ reccount }}
                     </span></p>
                 </div>
               </div>
@@ -66,8 +68,10 @@
                   <!-- <mat-icon class="class-icon">chat_bubble_outline</mat-icon> -->
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Sales','admin')">{{sintcount}}</span></p>
-                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Recruiting','admin')">{{rintcount}}</span>
+                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="intPop('Sales','admin')">{{sintcount}}</span></p>
+                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="intPop('Recruiting','admin')">{{rintcount}}</span>
                   </p>
                 </div>
               </div>
@@ -97,10 +101,11 @@
                   <!-- <mat-icon class="class-icon">check_circle</mat-icon> -->
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales :<span
-                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Sales','admin')">{{sclosecount}}</span></p>
+                  <p class="dashboard">Sales :<span style="color: rgb(25,135,84); font-weight: bold; cursor: pointer"
+                      (click)="closurePop('Sales','admin')">{{sclosecount}}</span></p>
                   <p class="dashboard">Recruiting :<span
-                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Recruiting','admin')">{{rclosecount}}</span></p>
+                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer"
+                      (click)="closurePop('Recruiting','admin')">{{rclosecount}}</span></p>
                 </div>
               </div>
             </mat-card-content>
@@ -112,7 +117,7 @@
         <div class="card-1">
           <mat-card>
             <div class="card">
-              <mat-card-title>Submissions  <span>| {{ submissionFlagInd }}</span></mat-card-title>
+              <mat-card-title>Submissions <span>| {{ submissionFlagInd }}</span></mat-card-title>
               <button mat-icon-button [matMenuTriggerFor]="menuSub">
                 <mat-icon>more_horiz</mat-icon>
               </button>
@@ -131,9 +136,11 @@
                   </button>
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Sales','emp')"> {{ subcountIndividual }} </span>
+                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="subPop('Sales','emp')"> {{ subcountIndividual }} </span>
                   </p>
-                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Recruiting','emp')"> {{ reccountIndividual }}
+                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="subPop('Recruiting','emp')"> {{ reccountIndividual }}
                     </span></p>
                 </div>
               </div>
@@ -162,8 +169,10 @@
                   </button>
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Sales','emp')">{{sintcountIndividual}}</span></p>
-                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Recruiting','emp')">{{rintcountIndividual}}</span>
+                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="intPop('Sales','emp')">{{sintcountIndividual}}</span></p>
+                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold; cursor: pointer"
+                      (click)="intPop('Recruiting','emp')">{{rintcountIndividual}}</span>
                   </p>
                 </div>
               </div>
@@ -192,10 +201,11 @@
                   </button>
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales :<span
-                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Sales','emp')">{{sclosecountIndividual}}</span></p>
+                  <p class="dashboard">Sales :<span style="color: rgb(25,135,84); font-weight: bold; cursor: pointer"
+                      (click)="closurePop('Sales','emp')">{{sclosecountIndividual}}</span></p>
                   <p class="dashboard">Recruiting :<span
-                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Recruiting','emp')">{{rclosecountIndividual}}</span></p>
+                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer"
+                      (click)="closurePop('Recruiting','emp')">{{rclosecountIndividual}}</span></p>
                 </div>
               </div>
             </mat-card-content>
@@ -203,7 +213,7 @@
         </div>
       </div>
 
-      <div class="left-div-inner-table">
+      <div class="left-div-inner-table" *ngIf="sourcingLead">
         <div class="table-container table-wrapper">
           <div class="header-container-leading-resources">
             <span class="header-text">Sourcing Leads</span>
@@ -245,7 +255,8 @@
               <ng-container matColumnDef="Track">
                 <th mat-header-cell *matHeaderCellDef> Track </th>
                 <td mat-cell *matCellDef="let emp" class="action-buttons">
-                  <button mat-raised-button class="track-button" *ngIf="emp.lockedby == userid " (click)="updateSlead(emp)">Update</button>
+                  <button mat-raised-button class="track-button" *ngIf="emp.lockedby == userid "
+                    (click)="updateSlead(emp)">Update</button>
                 </td>
               </ng-container>
 
@@ -257,6 +268,76 @@
           </section>
         </div>
       </div>
+
+      <div class="table-container-dice table-wrapper" *ngIf="!sourcingLead">
+        <div class="header-container-leading-resources">
+          <span class="header-text">Dice Requirement Tags</span>
+        </div>
+        <hr>
+        <section class="table-style-dice mat-elevation-z8" style="height: 490px; overflow-Y: scroll;">
+          <table mat-table [dataSource]="dataSourceDice" class="responsive-table">
+            <!-- Posted Date Column -->
+            <ng-container matColumnDef="PostedDate">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by PostedDate"> Posted
+                Date
+              </th>
+              <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on | date:'MM-dd-yyyy' }} </td>
+            </ng-container>
+
+            <!-- Job Title Column -->
+            <ng-container matColumnDef="JobTitle">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by JobTitle"> Job Title
+              </th>
+              <td mat-cell *matCellDef="let element"> <a href="{{ element.job_source }}"
+                  target="_blank">{{element?.job_title}}</a> </td>
+            </ng-container>
+
+            <!-- Category Column -->
+            <ng-container matColumnDef="Category">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.category_skill}} </td>
+            </ng-container>
+
+            <!-- Job Location Column -->
+            <ng-container matColumnDef="JobLocation">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by JobLocation"> Job
+                Location
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.job_location}} </td>
+            </ng-container>
+
+            <!-- Vendor Column -->
+            <ng-container matColumnDef="Vendor">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Vendor">
+                Vendor </th>
+              <td mat-cell *matCellDef="let element">{{element.vendor}}</td>
+            </ng-container>
+
+            <!-- Owner Column -->
+            <ng-container matColumnDef="TaggedDate">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedDate"> Tagged
+                Date
+              </th>
+              <td mat-cell *matCellDef="let element" nowrap> {{element.createddate | date:'MM-dd-yyyy' }} </td>
+            </ng-container>
+
+            <!-- Track Column -->
+            <ng-container matColumnDef="TaggedBy">
+              <th mat-header-cell *matHeaderCellDef> TaggedBy </th>
+              <td mat-cell *matCellDef="let element"> {{ element.pseudoname }} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="dataTableColumnsDice; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: dataTableColumnsDice;"></tr>
+          </table>
+          <hr>
+          <p class="no-data-found" *ngIf="!dataSourceDice.filteredData.length">{{'No matching data found'}}</p>
+        </section>
+
+
+      </div>
+
     </div>
     <div class="right-div">
       <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' ">
@@ -336,22 +417,18 @@
     </div>
   </div>
 
-  <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;">
+  <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
     <div class="header-container-leading-resources">
       <span class="header-text">Dice Requirement Tags</span>
     </div>
     <hr>
     <section class="table-style-dice mat-elevation-z8" style="height: 630px; overflow-Y: scroll;">
       <table mat-table [dataSource]="dataSourceDice" class="responsive-table">
-
-        <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-
         <!-- Posted Date Column -->
         <ng-container matColumnDef="PostedDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by PostedDate"> Posted Date
           </th>
-          <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
+          <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on | date:'MM-dd-yyyy' }} </td>
         </ng-container>
 
         <!-- Job Title Column -->
@@ -387,7 +464,7 @@
         <ng-container matColumnDef="TaggedDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedDate"> Tagged Date
           </th>
-          <td mat-cell *matCellDef="let element" nowrap> {{element.createddate}} </td>
+          <td mat-cell *matCellDef="let element" nowrap> {{element.createddate | date:'MM-dd-yyyy' }} </td>
         </ng-container>
 
         <!-- Track Column -->
