--- a/src/app/usit/components/reports/employee-reports/employee-reports.component.html
+++ b/src/app/usit/components/reports/employee-reports/employee-reports.component.html
@@ -56,12 +56,12 @@
     </mat-card>
   </form>
 
-  <mat-card class="matcards ">
+  <mat-card class="matcards " >
     <mat-card-content>
-      <div id="table-container" class="table-wrapper">
+      <div id="table-container" class="table-wrapper"  >
         <section class="section">
-          <div class="row scroll" style="height:600px;">
-            <table class="table table-sm  table-light table-bordered table-responsive">
+          <div class="row scroll" style="height:500px;">
+            <table class="table table-sm  table-light table-bordered table-responsive" >
               <thead class="thead-light sticky">
                 <tr>
                   <th>S.No</th>
@@ -175,6 +175,8 @@
       </div>
 
     </mat-card-content>
-  </mat-card>
+  </mat-card >
+<div style="margin-bottom: 2220px;">
 
+</div>
 </div>
