--- a/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
@@ -43,6 +43,7 @@
       <thead class="thead-light sticky">
         <tr>
           <th>S.No</th>
+          <th>Interview No</th>
           <th>Consultant Name</th>
           <th>Date & Time Of Interview</th>
           <th>Round</th>
@@ -59,6 +60,10 @@
           <td>
             {{ i + 1 }}
           </td>
+          <td>
+            {{ data.interviewno }}
+          </td>
+
           <td>
             {{ data.name }}
           </td>
