--- a/src/app/usit/components/sales/interview-list/interview-list.component.html
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.html
@@ -121,9 +121,11 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let interview">
-                        <span class="action-buttons">
+                        <span class="action-buttons" >
                             <button [disabled]="!privilegeServ.hasPrivilege('EDIT_INTERVIEWS') " mat-icon-button (click)="editInterview(interview)" class="action-button-ed">
-                                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_INTERVIEWS')}">edit</mat-icon>
+                                <mat-icon >edit</mat-icon>
+
+                                
                             </button>
                             <button [disabled]="!privilegeServ.hasPrivilege('DELETE_INTERVIEWS')"  mat-icon-button (click)="deleteInterview(interview)" class="action-button-ed">
                                 <mat-icon  [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('DELETE_INTERVIEWS')}" [ngClass]="'delete-icon'">delete</mat-icon>
