--- a/src/app/components/password-change/password-change.component.scss
+++ b/src/app/components/password-change/password-change.component.scss
@@ -1,85 +1,83 @@
 /* userprofile.component.css */
-
 .main {
-    padding: 20px;
-   background-color: #e7e7e7;
-   padding: 20px;
-   
-   padding-bottom: 128rem;
-
-  }
-  
-  .pagetitle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    
-  }
-  
-  /*.breadcrumb {
-    display: flex;
-    
-    
-    list-style: none;
-   
-   
-  }
-  
-  
-  .breadcrumb-item {
-    margin-right: 5px;
-    display: inline-block;
-    margin-top:3rem;
-   
-    
-  }*/
-  
-  .section {
-    margin-top: 20px;
-    
-  }
-  
-  .profile-card {
-    text-align: center;
-  }
-  
-  .profile-card img {
-    width: 150px;
-    //height: 150px;
-    object-fit: cover;
-    border-radius: 50%;
-  }
-  
-  .profile-card h2 {
-    margin-top: 10px;
-  }
-  
-  .profile-card h3 {
-    margin-bottom: 20px;
-  }
-  
+  padding: 20px;
+ background-color: #d4cece;
+padding: 20px;
  
-  .tab-pane {
-    padding: 20px;
-  }
-  
-  .invalid-feedback {
-    color: #dc3545;
-  }
-  
-.card {
-    margin-top: 20px; /* Adjust the margin-top as needed */
-    
-    width:70rem;
-    align-items: center;
+ padding-bottom: 128rem;
+// margin-left: 164px;
+ width: 120rem;
 
-  }
-  .col-xl-8{
-    background-color: white;
-    //width: 111%;
-    width: 70rem;
-    height: 28rem;
-  }
+}
+
+
+.pagetitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+color: rgb(53, 51, 51);
+}
+
+
+
+.section {
+  margin-top: 20px;
+  background-color: white;
+  width:44rem;
   
+}
+.mat-error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+ color: rgb(211, 33, 33);
+
+.profile-card {
+  text-align: center;
+}
+
+.profile-card img {
+  width: 150px;
+
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile-card h2 {
+  margin-top: 10px;
+}
+
+.profile-card h3 {
+  margin-bottom: 20px;
+}
+
+
+.tab-pane {
+  padding: 20px;
+}
+
+.invalid-feedback {
+  color: #dc3545;
+}
+
+
+
+.card {
+  margin-top: 20px; 
   
+  width:35rem;
+  align-items: center;
+
+}
+
+.h6{
+  display: flex;
+}
+.success, .fail {
+  font-size: 16px;
+}
+
+}
