--- a/src/app/components/password-change/password-change.component.html
+++ b/src/app/components/password-change/password-change.component.html
@@ -1,96 +1,94 @@
-
 <div style="overflow-x:hidden">
-    <main id="main" class="main" >
-      <div class="pagetitle">
-           <h2> My Profile</h2>
-      </div>
-      <section class="section profile">
-          <div class="row">
-              <div class="col-xl-4">
-                  <div class="card">
-               </div>
-              </div>
-              <div class="col-xl-8">
-                  <div class="card">
-                      <div class="card-body pt-3">
-                          <div *ngIf="message !== ''">
-                             <p class="text-center small">
-                             <b class="success" style="color:rgb(59, 148, 61)">{{ message }}</b>
-                             </p>
-                              </div>
-                                <div *ngIf="fail !== ''">
-                                  <p class="text-center small">
-                                    <b class="success" style="color:rgb(182, 56, 56)">{{ fail }}</b>
-                                  </p>
-                                </div>
-                                <br><br>
-                                  <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                                      <div class="row mb-3">
-                                        <!-- <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left:2rem;">Current Password</label>-->
-                                          <div class="col-md-8 col-lg-9">
-                                              <mat-form-field appearance="fill"   style="width:40rem ;margin-left:2rem">
-                                                  <mat-label> current Password</mat-label>
-                                                  <input matInput
-                                                         [ngClass]="{ 'is-invalid': submitted && f.password.errors}"
-                                                         required
-                                                         name="password"
-                                                         formControlName="password"
-                                                         [(ngModel)]="currentpassword"
-                                                         type="password">
-                                                  <mat-error *ngIf="f.password.hasError('required') && (submitted || f.password.touched)">Please enter your current password</mat-error>
-                                              </mat-form-field>
-                                          </div>
-                                      </div>
-                                       <br>
-                                    <div class="row mb-3" [ngClass]="{'has-error': submitted && f.newPassword.errors && f.newPassword.errors.required }">
-                                    <!--<label for="newPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left: 2rem;"> New Password</label>-->
-                                   <div class="col-md-8 col-lg-9">
-                                   <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem ;">
-                                   <mat-label> New Password</mat-label>
-                                   <input matInput
-                                   name="newPassword"
-                                   [ngClass]="{ 'is-invalid': submitted && f.newPassword.errors }"
-                                   formControlName="newPassword"
-                                   type="password"
-                                   [(ngModel)]="newpassword" >
-                            <!-- Display mat-error only if the field is empty, the submit button is clicked, and the field has been touched -->
-                                     <mat-error *ngIf="(submitted || f.password.touched) && f.nenewPasswordwpassword.errors && f.newPassword.errors.required && !newpassword" >
-                                      Please enter your new password</mat-error>
-                                    <mat-error *ngIf="f.newPassword.errors?.pattern">
-                                    Password should be between 8 - 15 characters long and should contain one number, one upper and lower case character, and one special character.
-              </mat-error>
-          </mat-form-field>
-      </div>
+  <main id="main" class="main" >
+    <div class="pagetitle">
+         <h2> My Profile</h2>
     </div>
-    <div class="row mb-3" [style.margin-top]="(touchedReenter && f.newPassword.errors ? '2rem' : '1rem')">
-      <!--<label for="renewPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left:2rem;">Re-enter New Password</label>-->
-      <div class="col-md-8 col-lg-9">
-          <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem;">
-              <mat-label>Confirm Password</mat-label>
-              <input matInput
-                     name="renewpassword"
-                     [(ngModel)]="confirmpassword"
-                     [ngClass]="{ 'is-invalid': submitted && f.renewpassword.errors }"
-                     formControlName="renewpassword"
-                     type="password"
-                     (focus)="touchedReenter = true">
-              <mat-error *ngIf="(submitted || f.password.touched) && f.newpassword.errors && f.renewpassword.errors.required && !confirmpassword">Please Re-Enter your new password</mat-error>
-              <mat-error *ngIf="f.renewpassword.errors?.pattern">
-                  Password should be between 8 - 15 characters long and should contain one number, one upper and lower case character, and one special character.
-              </mat-error>
-          </mat-form-field>
-      </div>
-    </div>
-    <div class="text-center">
-                <button type="submit" mat-raised-button color="primary" (focus)="touchedReenter = true" style="margin-left:14rem;margin-top:4rem;" >Change Password</button>
-                     </div>
-                     </form>
+    <section class="section profile">
+        <div class="row">
+            <div class="col-xl-4">
+                <div class="card">
+             </div>
+            </div>
+            <div class="col-xl-8">
+                <div class="card">
+                    <div class="card-body pt-3">
+                        <div *ngIf="message !== ''">
+                           <p class="text-center small">
+                           <b class="success" style="color:rgb(59, 148, 61)">{{ message }}</b>
+                           </p>
+                            </div>
+                              <div *ngIf="fail !== ''">
+                                <p class="text-center small">
+                                  <b class="success" style="color:rgb(182, 56, 56)">{{ fail }}</b>
+                                </p>
                               </div>
-                          </div>
-                      </div>
-                  </div>
-              </section>
-        </main>
-    
-      </div>
-    
+                              <br><br>
+                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                                    <div class="row mb-3">
+                                      <!-- <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left:2rem;">Current Password</label>-->
+                                        <div class="col-md-8 col-lg-9">
+                                            <mat-form-field appearance="fill"   style="width:40rem ;margin-left:2rem">
+                                                <mat-label> current Password</mat-label>
+                                                <input matInput
+                                                       [ngClass]="{ 'is-invalid': submitted && f.password.errors}"
+                                                       required
+                                                       name="password"
+                                                       formControlName="password"
+                                                       [(ngModel)]="currentpassword"
+                                                       type="password">
+                                                <mat-error *ngIf="f.password.hasError('required') && (submitted || f.password.touched)">Please enter your current password</mat-error>
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
+                                     <br>
+                                  <div class="row mb-3" [ngClass]="{'has-error': submitted && f.newpassword.errors && f.newpassword.errors.required }">
+                                  <!--<label for="newPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left: 2rem;"> New Password</label>-->
+                                 <div class="col-md-8 col-lg-9">
+                                 <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem ;">
+                                 <mat-label> New Password</mat-label>
+                                 <input matInput
+                                 name="newpassword"
+                                 [ngClass]="{ 'is-invalid': submitted && f.newpassword.errors }"
+                                 formControlName="newpassword"
+                                 type="password"
+                                 [(ngModel)]="newpassword" >
+                          <!-- Display mat-error only if the field is empty, the submit button is clicked, and the field has been touched -->
+                                   <mat-error *ngIf="(submitted || f.password.touched) && f.newpassword.errors && f.newpassword.errors.required && !newpassword" >
+                                    Please enter your new password</mat-error>
+                                  <mat-error *ngIf="f.newpassword.errors?.pattern">
+                                  Password should be between 8 - 15 characters long and should contain one number, one upper and lower case character, and one special character.
+            </mat-error>
+        </mat-form-field>
+    </div>
+  </div>
+  <div class="row mb-3" [style.margin-top]="(touchedReenter && f.newpassword.errors ? '2rem' : '1rem')">
+    <!--<label for="renewPassword" class="col-md-4 col-lg-3 col-form-label" style="margin-left:2rem;">Re-enter New Password</label>-->
+    <div class="col-md-8 col-lg-9">
+        <mat-form-field appearance="fill" style="width:40rem ;margin-left:2rem;">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput
+                   name="renewpassword"
+                   [(ngModel)]="confirmpassword"
+                   [ngClass]="{ 'is-invalid': submitted && f.renewpassword.errors }"
+                   formControlName="renewpassword"
+                   type="password"
+                   (focus)="touchedReenter = true">
+            <mat-error *ngIf="(submitted || f.password.touched) && f.newpassword.errors && f.renewpassword.errors.required && !confirmpassword">Please Re-Enter your new password</mat-error>
+            <mat-error *ngIf="f.renewpassword.errors?.pattern">
+                Password should be between 8 - 15 characters long and should contain one number, one upper and lower case character, and one special character.
+            </mat-error>   
+        </mat-form-field>
+    </div>
+  </div>
+  <div class="text-center">
+              <button type="submit" mat-raised-button color="primary" (focus)="touchedReenter = true" style="margin-left:14rem;margin-top:4rem;" >Change Password</button>
+                   </div>
+                   </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+      </main>
+  
+    </div>
